--- a/public/styles.css
+++ b/public/styles.css
@@ -23,7 +23,7 @@ html, body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 60%;
+  height: 75%;
   background: linear-gradient(to bottom, #87CEEB, #E0F6FF);
   transition: background 0.5s ease;
 }
@@ -117,8 +117,7 @@ html, body {
   left: 0;
   width: 100%;
   height: 25%;
-  overflow-x: auto;
-  overflow-y: visible;
+  overflow: visible;
   z-index: 10;
 }
 
