--- a/public/styles.css
+++ b/public/styles.css
@@ -133,12 +133,13 @@ html, body {
 }
 
 #trees-container {
+  position: absolute;
+  bottom: 0;
+  left: 0;
   display: flex;
   align-items: flex-end;
   gap: 60px;
   padding: 0 50px;
-  height: 100%;
-  padding-bottom: 20px;
 }
 
 /* 나무 스타일 */
