--- a/public/styles.css
+++ b/public/styles.css
@@ -134,7 +134,7 @@ html, body {
 
 #trees-container {
   position: absolute;
-  bottom: 100%;
+  bottom: calc(100% - 75px);
   left: 0;
   display: flex;
   align-items: flex-end;
